# email-service

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  example.env  example_publisher  setup.cfg  setup.py
.github/workflows/: docker-push.yml  lint.yml  tests.yml
docker/: Dockerfile
make/: ci.mk  run.mk
src/email_service/: api.py  asgi.py  main.py
src/email_service/core/: config.py  service_container.py
src/email_service/domain/: consumer.py  email_schema.py  email_server.py  email_service.py  publisher.py
