[metadata]
name = email_service
url = https://github.com/nymann/email-service
maintainer = Kristian Nymann Jakobsen
maintainer_email = kristian@nymann.dev
description = Email Service
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
package_dir = = src
python_requires = >= 3.10
setup_requires =
    pytest-runner
install_requires =
    pydantic >= 1.10.2
    kafka-python >= 2.0.2

[options.extras_require]
all =
    %(dev)s
    %(tests)s
dev =
    add-trailing-comma
    black
    devtools[pygmentz]
    faker
    isort
    mypy
    nitpick
    typer
    uvicorn
    wemake-python-styleguide
tests =
    python-dotenv
    pytest
    pytest-cov
    pytest-mock
    pytest-asyncio
package =
    twine
    wheel

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    email_service = email_service.main:main


[tool:pytest]
testpaths = tests
addopts =
    --color=yes
    --cov-report=xml
    --cov-report=html
    --cov=src
    --cov-report=term-missing

[coverage:run]
branch = true
omit = src/email_service/version.py
source =
    src
    tests

[coverage:paths]
source =
    src

[aliases]
test=pytest

[pydocstyle]
convention=google

[flake8]
docstring-style = google
format = wemake
ignore = WPS305,D100,D101,D102,D103,D104,D105,D106,D107,H601,WPS306,WPS526,WPS323
max-complexity = 6
max-line-length = 120
show-source = True
strictness = long
inline-quotes = double
per-file-ignores =
    tests/**.py:WPS218,WPS432,WPS442,S101
    src/email_service/version.py:WPS410

[isort]
combine_as_imports = True
force_grid_wrap = 0
force_single_line = True
force_sort_within_sections = True
include_trailing_comma = True
lexicographical = True
line_length = 120
multi_line_output = 3
single_line_exclusions = typing
src_paths = src,tests

[mypy]
allow_redefinition = False
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
local_partial_types = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
